--- a/src/app/features/offerbook/request/offer-item/offer-item.component.html
+++ b/src/app/features/offerbook/request/offer-item/offer-item.component.html
@@ -35,7 +35,7 @@
         title="Двойной клик, чтобы принять предложение продавца"
         (dblclick) = "acceptOffer()"
         disabled>
-        Принято!
+        Принято
     </button>
     <button 
         class="currentoffer__acceptbtn_rejected disabled"
