--- a/src/app/features/offerbook/offer/offer-popup/offer-popup.component.html
+++ b/src/app/features/offerbook/offer/offer-popup/offer-popup.component.html
@@ -1,6 +1,21 @@
 <h1 mat-dialog-title>Ваше предложение </h1>
-<div mat-dialog-content [formGroup]="offerForm" (ngSubmit)="submitForm()" class="offer-form">
-    <mat-form-field>
+<form mat-dialog-content [formGroup]="offerForm" (ngSubmit)="submitForm()" class="offer-form">
+    
+  <div class="photoblock"> 
+    <div>
+    <label>
+      <input class="photoblock__setphoto" type="file" name="photo" (change)="process($event.target.files)" formControlName="offerImage" accept="image/*">
+      <mat-icon class="photoblock__photo-icon" matSuffix>add_a_photo</mat-icon>
+    </label>  
+  </div>
+    <div class="photoblock__photo-wrap">
+      <div class="photoblock__photos" *ngFor = " let photo of photos64">
+        <img class="photoblock__photo" #photoImg  [src]="photo">
+      </div>
+    </div>
+  </div>
+  
+  <mat-form-field>
         <mat-label>Введите описание</mat-label>
         <input matInput
         type="text"
@@ -18,13 +33,21 @@
     <mat-form-field>
       <mat-label>Стоимость</mat-label>
       <input matInput
-          placeholder="Укажите цену"
+          placeholder="Укажите цену в формате 10.50 или 10,50"
           formControlName="price">
+    <mat-error *ngIf="offerForm.get('price').hasError('required') ">
+      Это обязательное поле
+    </mat-error>
+    <mat-error *ngIf="!offerForm.get('price').hasError('required') && offerForm.get('price').hasError('pattern')">
+      Стоимость должна быть в формате рублей или рублей.копеек или рублей,копеек
+    </mat-error>
   </mat-form-field>
     
+
+
   <mat-checkbox class="example-margin" formControlName="secondHand">б/у</mat-checkbox>
 
-    <mat-form-field>
+    <!-- <mat-form-field>
       <ngx-mat-file-input formControlName="offerImage"
         [accept]="'.png,.jpg,.jpeg'"
        placeholder="Выберите фото" ></ngx-mat-file-input>
@@ -34,9 +57,9 @@
          (Ваш файл {{offerForm.get('offerImage')?.getError('maxContentSize').actualSize
         | byteFormat}}).
       </mat-error>
-    </mat-form-field>
+    </mat-form-field> -->
     
-  </div>
+  </form>
   <div mat-dialog-actions>
     <button mat-button mat-dialog-close>Отмена</button>
     <button mat-raised-button
