--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,37 @@ html, body { height: 100%; font-size: 14px;}
 
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
+.photoblock{
+    display: flex;
+
+    &__setphoto{
+        display: none;
+    }
+    &__photo-icon{
+        width: 2.5rem !important;
+        height: 2.5rem !important;
+
+        cursor: pointer;
+
+        font-size: 2.5rem;
+    } 
+    &__photos{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 2.5rem;
+        height: 2.5rem;
+    
+        border: 1px solid grey;
+        border-radius: .3rem;
+    }
+    &__photo{
+        max-width: 2.5rem;
+        max-height: 2.5rem;
+        object-fit: cover;
+    }
+}
+
 @media screen and (max-width: breakpoint(desktop)) {
     html {
         font-size: 120%;
