--- a/src/app/features/offerbook/request/offer-item/offer-item.component.scss
+++ b/src/app/features/offerbook/request/offer-item/offer-item.component.scss
@@ -43,7 +43,10 @@
     &__seller{
     flex: 0 1 15%;
     padding-left: .4rem;
-
+    }
+    &__seller_active{
+        color: $link;
+        cursor: pointer;
     }
 
     &__acceptbtn{
