--- a/src/app/features/offerbook/request/request-item/request-item.component.scss
+++ b/src/app/features/offerbook/request/request-item/request-item.component.scss
@@ -34,6 +34,9 @@
       font-weight: 600;
       cursor: pointer;
     }
+    &__offers_active{
+      color: $link;
+    }
     &__new-offers{
       font-weight: 600;
     }
