--- a/src/app/features/offerbook/request/offer-list/offer-list.component.html
+++ b/src/app/features/offerbook/request/offer-list/offer-list.component.html
@@ -6,5 +6,6 @@
     *ngFor = "let offer of offerList; let i = index"
     [currentOffer] = "offer"
     [index] = "i+1"
-    [currentRequest] = "currentRequest">
+    [currentRequest] = "currentRequest"
+    [screenWidth] = "screenWidth">
 </app-offer-item>
