refactor: logo to initial loadbr added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -49,5 +49,6 @@
 <router-outlet></router-outlet>
 </main>  
 <div class="preloadbar" *ngIf = "!loadPage">
-<img src="../assets/img/eclipse.svg"></div>
+<img src="../assets/img/eclipse.svg">
+<p class="load-logo-link">offerBook</p></div>
 
