--- a/src/app/features/offerbook/request/comments-popup/comments-popup.component.html
+++ b/src/app/features/offerbook/request/comments-popup/comments-popup.component.html
@@ -2,9 +2,9 @@
 <mat-card class="comments" *ngFor = "let rate of rates; let i = index">
 <p class="comments__index">{{i+1}}</p>
 <div comments__main>
-    <p class="comments__request">Заказ № {{rate.id}}: {{rate.title}} </p>
+    <p class="comments__request">{{rate.date ? (rate.date | date:'mediumDate') : 'no date'}} Заказ № {{rate.id}}: <span class="comments__request_title"> {{rate.title}} </span> </p>
     <p class="comments__user">От: {{rate.fromUserName ? rate.fromUserName : 'без имени'}}</p>
-    <p class="comments__comment">{{rate.comment}}</p>
+    <p class="comments__comment">{{rate.comment ? 'Комментарий: ' + rate.comment : ''}}</p>
 </div>
 
 </mat-card>
