--- a/src/app/features/offerbook/request/request-change-popup/request-change-popup.component.html
+++ b/src/app/features/offerbook/request/request-change-popup/request-change-popup.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>Измените нужное поле(-я)</h1>
+<h1 class="title" mat-dialog-title>Измените нужное поле(-я)</h1>
 <form class="request-form" mat-dialog-content [formGroup]="requestChangeForm" (ngSubmit)="submitForm()" >
   <div class="photoblock"> 
     <div>
