--- a/src/app/features/offerbook/request/comments-popup/comments-popup.component.scss
+++ b/src/app/features/offerbook/request/comments-popup/comments-popup.component.scss
@@ -1,12 +1,25 @@
+.title{
+    font-size: 1rem;
+}
 .comments{
     display: flex;
-    margin-bottom: .5rem;
+    margin-bottom: .6rem;
 
     &__index{
-        padding-right: .5rem;
+        align-self: center;
+        padding-right: .8rem;
+
+        font-size: 1rem;
         font-weight: bold;
     }
     &__request_title{
-        font-weight: bold;
+        font-weight: 400;
+    }
+    &__initial{
+        font-weight: 600;
+        // font-style: italic;
+    }
+    &__date{
+        font-size: .7rem;;
     }
 }
